add sell paid row
